<?xml version="1.0"?>
<package format="2">
  <name>controller_tutorial</name>
  <version>0.0.0</version>
  <description>The controller_tutorial package</description>
  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>potbot_lib</build_depend>
</package>
